# KubeResearch

./: .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  index.yaml  mkdocs.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: helm_chart_package.yml  pypipublish.yml
charts/KubeResearch/: Chart.yaml  values.yaml
charts/KubeResearch/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
charts/KubeResearch/templates/tests/: test-connection.yaml
docs/: config.md  requirements.txt
kubr/: main.py  requirements.txt
kubr/backends/: base.py  k8s_runner.py  utils.py  volcano.py
kubr/commands/: attach.py  base.py  desc.py  logs.py  ls.py  rm.py  run.py  stat.py  test.py
kubr/commands/utils/: drawing.py  reply.py
kubr/config/: job.py  runner.py
kubr/desc/: operator.py
kubr/logs/: operator.py
kubr/ls/: operator.py
kubr/rm/: operator.py
kubr/run/: operator.py
kubr/tests/: test_runner.py
